--- a/ocrconverter/app/build.gradle
+++ b/ocrconverter/app/build.gradle
@@ -21,7 +21,8 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-	implementation 'com.android.support:support-v4:23.0.0'
+    implementation 'com.android.support:support-v4:23.0.0'
     implementation 'com.android.support:design:23.0.0'
+    implementation 'com.android.support:appcompat-v7:23.0.0'
     implementation 'com.google.android.gms:play-services-vision:9.0.0+'
 }
