--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,10 @@
-build/
-.gradle
-.idea
 *.iml
-local.properties
+.gradle
+/local.properties
+/.idea/libraries
+/.idea/modules.xml
+/.idea/workspace.xml
 .DS_Store
-captures/
+/build
+/captures
+.externalNativeBuild
