--- a/ocrconverter/app/build.gradle
+++ b/ocrconverter/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion '28-rc1'
 
     defaultConfig {
-        applicationId "com.google.android.gms.samples.vision.barcodereader"
+        applicationId "com.google.android.gms.samples.vision.ocrreader"
         minSdkVersion 21
         targetSdkVersion 23
         versionCode 1
@@ -22,7 +22,8 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:support-v4:23.0.0'
-    implementation 'com.android.support:design:23.0.0'
+    implementation 'com.android.support:design:25.0.0'
     implementation 'com.android.support:appcompat-v7:23.0.0'
     implementation 'com.google.android.gms:play-services-vision:9.0.0+'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.0'
 }
