--- a/ocrconverter/app/src/main/AndroidManifest.xml
+++ b/ocrconverter/app/src/main/AndroidManifest.xml
@@ -25,20 +25,16 @@
         <activity
             android:name=".OcrCaptureActivity"
             android:label="Text Reader">
-            <intent-filter>
+       </activity>
+       <activity
+            android:name="com.google.android.gms.samples.vision.ocrreader.NavigationActivity"
+            android:label="@string/title_activity_navigation">
+           <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        <activity
-            android:name=".SettingsActivity"
-            android:label="@string/title_activity_settings"
-            android:parentActivityName=".OcrCaptureActivity">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.google.android.gms.samples.vision.ocrreader.OcrCaptureActivity" />
-        </activity>
+           </intent-filter>
+       </activity>
     </application>
 
 </manifest>
