--- a/ocrconverter/app/src/main/AndroidManifest.xml
+++ b/ocrconverter/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:icon="@drawable/icon"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+        >
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
@@ -24,11 +24,13 @@
 
         <activity
             android:name=".OcrCaptureActivity"
-            android:label="Text Reader">
+            android:label="@string/title_activity_ocr"
+            android:theme="@style/Theme.AppCompat.NoActionBar" >
        </activity>
        <activity
             android:name="com.google.android.gms.samples.vision.ocrreader.NavigationActivity"
-            android:label="@string/title_activity_navigation">
+            android:label="@string/app_name"
+            android:theme="@style/Theme.AppCompat.DayNight.DarkActionBar" >
            <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
