--- a/ocrconverter/app/build.gradle
+++ b/ocrconverter/app/build.gradle
@@ -26,4 +26,5 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:23.0.0'
     implementation 'com.google.android.gms:play-services-vision:9.0.0+'
     implementation 'com.android.support.constraint:constraint-layout:1.1.0'
+    implementation 'com.android.support:preference-v7:23.3.0'
 }
