--- a/ocrconverter/app/build.gradle
+++ b/ocrconverter/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion '28-rc1'
 
     defaultConfig {
-        applicationId "com.google.android.gms.samples.vision.ocrreader"
+        applicationId "com.alexn34.developer.ocrreader"
         minSdkVersion 23
         targetSdkVersion 23
         versionCode 1
@@ -24,6 +24,6 @@ dependencies {
     implementation 'com.android.support:support-v4:23.0.0'
     implementation 'com.android.support:design:25.0.0'
     implementation 'com.android.support:appcompat-v7:23.0.0'
-    implementation 'com.google.android.gms:play-services-vision:9.0.0+'
+    implementation 'com.google.android.gms:play-services-vision:9.4.0+'
     implementation 'com.android.support:preference-v7:23.0.0'
 }
